[Bugs fixing] | Fixed layout-shifting in both navigation and sitemap's ul-s

--- a/style.css
+++ b/style.css
@@ -60,6 +60,8 @@ body {
         .nav-list ul li a {display: inline-block; position: relative;}
         .nav-list ul li a, .nav-list ul li a::after {transition: .3s;}
         .nav-list ul li a::after {content: ''; display: block; position: absolute; bottom: -6px;background: var(--color-2); border-radius: 1px; width: 12px;height: 2px; opacity: 0;}
+        .nav-list ul li a::before {display: block;content: attr(title);font-weight: bold;height: 0;overflow: hidden;visibility: hidden;}
+
         .nav-list ul li:hover a{font-weight: 600; color: var(--color-2); }
         .nav-list ul li:hover a::after {opacity: 1;width: 100%;}
         /* cta */
@@ -194,6 +196,7 @@ body {
                     .sitemap .item .hr {width: 130px; margin: 14px 0 28px;}
                     .sitemap .item ul li {font-size: 1.4rem; line-height: 1.85;}
                         .sitemap .item ul a {display: inline-block; margin-bottom: 12px; line-height: 1.85;}
+                        .sitemap .item ul a::before {display: block;content: attr(title);font-weight: bold;height: 0;overflow: hidden;visibility: hidden;}
                         .sitemap .item ul a:hover {color: var(--color-3); font-weight: 600;}
                         .sitemap .item ul li span {color: var(--color-3); font-weight: 600; font-size: 1.4rem; line-height: 1.85;}
                         
